# CapStone-Project

./: .envExample  .gitignore  Dockerfile  LOGPATH  README.md  answer.txt  anwser.txt  capstone.drawio  package-lock.json  pyproject.toml  requirements.txt  test.txt  text_classification.pkl
capstone/backend/: app.py  main.py
capstone/backend/api/: database.py  models.py
capstone/backend/api/router/: __init__,.py  __init__.py  chatbot.py  dashboard.py  document.py  dynamic.py
capstone/backend/api/schema/: model_api.py  model_database.py
capstone/backend/api/utils/: __init__.py  convert.py  dashboard_query.py
capstone/backend/classification/: test.ipynb  text_classification.pkl  train.csv  train.py
capstone/backend/database/: __init__.py  connection.py  events.py  model_database.py  models.py
capstone/backend/database/history_database/: sqlalchemy_example.db
capstone/backend/database/vector_database/: chroma.sqlite3
capstone/backend/llms/: __init__.py  agent.ipynb  agent.py  core.py  exception.py  main.py  models.py  prompt_template.py
capstone/backend/llms/core/: main.py  model.py  models.py
capstone/backend/llms/embedding/: embeddingTools.py  embedding_ollama.py
capstone/backend/llms/loadder/: LoaderManager.py  __init__.py  loadPDFManager.py  loadTextManager.py  loadUniversalManager.py  pdf_loader.py
capstone/backend/llms/prompt_teamplate/: README.md  prompt_template.py
capstone/backend/llms/prompts/: __init__.py  decision_prompt.py  grader.py  new prompt.txt  rag.py  refine.py  rewrite.py
capstone/backend/llms/tools/: webseacrh.py
capstone/backend/llms/utils/: __init__.py  exception.py  prompt_template.py  register.py  splitter.py
capstone/backend/llms/vectordb/: __init__.py  session.py
capstone/backend/logs/: logging_config.py
capstone/backend/utils/: database.py  timer.py
capstone/frontend/: ChatKMITL.css  ChatKMITL.html  ChatKMITL.js  KMITLBot.html  README.md  index.html  package-lock.json  package.json
capstone/frontend/capstone-project/: package-lock.json
capstone/frontend/prisma/: schema.prisma
capstone/frontend/src/: App.jsx  Layout.jsx  index.css  main.jsx
database/history_database/: internal.db  sqlalchemy_example.db
database/vector_database/: chroma.sqlite3
diagram/: diagram_creater.ipynb
document/: test.txt
evaluation/: test_knowledge.json
learning/: Readme.md  augmented_dataset.csv  augmented_dataset1.csv  augmented_dataset2.csv  augmented_dataset3.csv  leanring.ipynb  leanring_RAG.ipynb  learning_RAG.ipynb  loader.ipynb  main.py  text_analysis.ipynb  text_classification_model.pkl  train.csv  vectordb.ipynb
learning/database_learning/: app.py  event.py  models.py  text_classification.py
src/backend/: main.py
src/frontend/capstone-project/: README.md
(+45 files in other folders)
