[project]
name = "capstone-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.23",
    "fastapi>=0.115.6",
    "langchain-chroma>=0.1.4",
    "langchain>=0.3.13",
    "sqlalchemy>=2.0.36",
    "langchain-community>=0.3.13",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain-ollama>=0.2.2",
    "pypdf>=5.1.0",
    "langgraph>=0.2.61",
    "beautifulsoup4>=4.12.3",
    "python-multipart>=0.0.20",
    "pulumi>=3.33.1",
    "pulumi-aws>=6.55.0",
    "datasets>=3.2.0",
    "torch>=2.5.1",
    "transformers[torch]>=4.46.3",
    "langchain-experimental>=0.3.4",
    "langchain-postgres>=0.0.13",
    "ujson>=5.10.0",
]

[dependency-groups]
diagram = [
    "diagrams>=0.24.1",
]
text-analysis = [
    "langdetect>=1.0.9",
    "pythainlp>=5.0.5",
    "scikit-learn>=1.6.1",
]
fine-tine = [
    "unsloth>=2025.1.5",
]

[tool.uv]
default-groups = [
    ]
